testing/errors/alreadydefined2.a
;ACME 0.96.5
	a = 3
	a = 4	; -> "already defined" (value has changed)
